added walletConnect integration

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,9 +48,13 @@
     "@emotion/react": "^11.7.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@json-rpc-tools/utils": "^1.7.6",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "@popperjs/core": "^2.11.2",
+    "@walletconnect/client": "^1.8.0",
+    "algorand-walletconnect-qrcode-modal": "^1.8.0",
+    "algosdk": "^2.1.0",
     "apexcharts-clevision": "3.28.5",
     "clsx": "^1.1.1",
     "mdi-material-ui": "^7.1.0",
