--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "clsx": "^1.1.1",
     "mdi-material-ui": "^7.1.0",
     "next": "12.0.4",
+    "nft.storage": "^7.0.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
